--- a/index.html
+++ b/index.html
@@ -10,8 +10,39 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #0f172a;
-      color: #f8fafc;
+      overflow-x: hidden;
+    }
+
+    .bg-premium-light {
+      background: linear-gradient(135deg, #7FA2FF 0%, #A5B6FF 50%, #C8D1FF 100%);
+      position: relative;
+    }
+
+    .bg-premium-light::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background-image: 
+        radial-gradient(circle at 20% 30%, rgba(255,255,255,0.4) 0%, transparent 40%),
+        radial-gradient(circle at 80% 70%, rgba(255,255,255,0.4) 0%, transparent 40%);
+      pointer-events: none;
+    }
+
+    .bg-premium-dark {
+      background: linear-gradient(135deg, #1E3A8A 0%, #312E81 50%, #1E1B4B 100%);
+      position: relative;
+    }
+
+    .bg-premium-dark::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background-image: 
+        radial-gradient(circle at 20% 30%, rgba(67, 56, 202, 0.4) 0%, transparent 40%),
+        radial-gradient(circle at 80% 70%, rgba(67, 56, 202, 0.4) 0%, transparent 40%),
+        url('https://www.transparenttextures.com/patterns/stardust.png');
+      opacity: 0.3;
+      pointer-events: none;
     }
 
     /* Custom scrollbar */
